--- a/css/main.css
+++ b/css/main.css
@@ -39,25 +39,28 @@ header {
 #greeting {
     position: absolute;
     font-weight: lighter;
-    left: 50%;
     top: 50%;
-    width: 100%;
+    left: 50%;
+    width: auto;
     transform: translate(-50%, -50%);
     text-align: center;
 }
 
-    #greeting form {
-        padding: 10px;
+    #greeting h1 {
         display: inline-block;
+        margin: auto;
     }
 
-#greeting.normal {
-    font-weight: 100;
-}
+    #greeting form {
+        padding: 5px;
+        display: inline-block;
+        width: 100%;
+    }
 
 input[type=text] {
-    padding: 10px 10px;
+    padding: 10px 4px;
     margin: 4px;
+    width: 70%;
     box-sizing: border-box;
     border: none;
     border-bottom: 2px solid #ecf0f1;
@@ -69,4 +72,5 @@ input[type=text] {
 
 input[type=text]:focus {
     width: 100%;
+    outline-width: 0;
 }
