--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,7 @@ html, body {
     padding: 0;
     height: 100%;
     font-family: Lato, sans-serif;
-    background: -webkit-linear-gradient(left top, #3498db, #8531b1);
-    background: linear-gradient(to bottom right, #3498db, #8531b1); /* Standard syntax */
+    background-color: #3498db;
 }
 
 div, nav {
@@ -27,7 +26,24 @@ a, a:visited {
     font-family: Lato, sans-serif;
 }
 
+.section {
+    height: 100%;
+}
+
+.container {
+    padding: 40px 0;   
+}
+
+.column {
+    margin: 0 20%; 
+}  
+
 /* Navigation */
+#home {
+    background: -webkit-linear-gradient(left top, #3498db, #8531b1);
+    background: linear-gradient(to bottom right, #3498db, #8531b1);
+    padding: 0;
+}
 
 header {
     padding: 10px 0px;
@@ -104,18 +120,22 @@ header {
 
     #greeting form {
         padding: 5px;
+        margin: 0;
         display: inline-block;
         width: 100%;
     }
 
 input[type=text] {
-    padding: 10px 4px;
-    margin: 4px;
-    width: 70%;
+    display: inline-block;
+    padding: 4px 4px;
+    width: 50%;
     box-sizing: border-box;
     border: none;
     border-bottom: 2px solid #ecf0f1;
     background-color: transparent;
+    color: #ecf0f1;
+    font-size: 1em;
+    text-align: center;
     
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
@@ -124,4 +144,22 @@ input[type=text] {
 input[type=text]:focus {
     width: 100%;
     outline-width: 0;
+}
+
+/* == STATS == */
+#stats {
+    background-color: white;
+    color: black;
+}    
+
+/* == ABOUT == */
+#about {
+    background-color: grey;
+    height: auto;
+}
+
+/* == FOOTER == */
+footer {
+    background-color: black;
+    height: 200px;
 }
