added section class formatting

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ a, a:visited {
 }
 
 .column {
-    margin: 0 20%; 
+    margin: 0 10%; 
 }  
 
 /* Navigation */
@@ -150,11 +150,19 @@ input[type=text]:focus {
 #stats {
     background-color: white;
     color: black;
-}    
+}
+
+    #stats .column {
+        color: black;
+    }
+
+    #stats .column h2 {
+        color: black;
+    }
 
 /* == ABOUT == */
 #about {
-    background-color: grey;
+    background-color: #4b2e3b;
     height: auto;
 }
 
