--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ header {
     .logo_container {
         overflow: auto;
         float: left;
+        padding-top: 3px;
         color: white;
     }
 
@@ -164,7 +165,111 @@ input[type=text]:focus {
 /* == ABOUT == */
 #about {
     background-color: #4b2e3b;
+    display: flex;
+    flex-wrap: wrap;
     height: auto;
+}
+
+    .infocard {
+        font-size: 16px;
+        display: inline-block;
+        margin-bottom: 8px;
+        width: calc(50% - 4px);
+        margin-right: 8px;
+        vertical-align: top;
+        text-align: center;
+    }
+
+    @media screen and (min-width: 50em) {
+        .infocard {
+            width: calc(25% - 8px);
+        }
+
+        .infocard:nth-of-type(2n) {
+            margin-right: 8px;
+        }
+
+        .infocard:nth-of-type(4n) {
+            margin-right: 0;
+        }
+    }
+
+    .infocard:nth-of-type(2n) {
+        margin-right: 0;
+    }
+
+    .profile {
+        display: inline-block;
+    }
+
+        .profile img {
+            margin: auto;
+            padding: 10px;
+            border-radius: 50%;
+            width: 175px;
+            height: 175px;
+            display: block;
+        }
+
+    .user {
+        text-align: left;
+    }
+
+    .quote {
+        text-align: left;
+        margin-top: 10px;
+        padding: 0 20px 0 30px;
+    }
+
+    .name {
+        color: bisque;
+        font-family: sans-serif;
+        font-size: 1.2em;
+        margin-top: 30px;
+    }
+    
+    ul.contact {
+        text-align: left;
+        list-style: none;
+        margin-left: 50px;
+        padding: 0;
+    }
+
+    .contact.li {
+        padding: 0;
+        margin: 0;
+    }
+
+        li.ln::before {
+            content: "\f08c";
+            font-family: FontAwesome;
+            position: absolute;
+            left: 26;
+            padding-top: 2px;
+        }
+
+        li.email::before {
+            content: "\f003";
+            font-family: FontAwesome;
+            position: absolute;
+            left: 25px;
+            padding-top: 2px;
+        }
+
+.quote::before {
+    content: "\f10d";
+    font-family: FontAwesome;
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+
+.quote::after {
+    content: "\f10e";
+    font-family: FontAwesome;
+    right: 5px;
+    position: absolute;
+    bottom: 0;
 }
 
 /* == FOOTER == */
@@ -172,3 +277,31 @@ footer {
     background-color: black;
     height: 200px;
 }
+
+    footer ul {
+        padding: 0;
+        margin: 0;
+    }
+
+/* == WORKSPACE == */
+.workspace {
+    height: 60%;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    border: 2px solid white;
+}
+
+.story-box {
+    padding: 20px;
+}
+
+.story-box .title-container {
+    width: 100%;
+    border-bottom: 1px solid white;
+}
+
+    .story-text {
+        padding-top: 10px;
+        height: 85%;
+        overflow: scroll;
+    }
