--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ html, body {
     background-color: #3498db;
 }
 
+html {overflow: hidden;}
+body {overflow: auto;}
+
 div, nav {
     position: relative;
     display: block;
@@ -274,9 +277,17 @@ input[type=text]:focus {
 
 /* == FOOTER == */
 footer {
+    position:  relative;
     background-color: black;
     height: 200px;
 }
+
+    #footer-logo{
+        position: absolute;
+        left: 50%;
+        bottom: 50%;
+        transform: translate(-50%, -50%);
+    }
 
     footer ul {
         padding: 0;
@@ -284,11 +295,16 @@ footer {
     }
 
 /* == WORKSPACE == */
+#contribute {
+    padding-top: 40px;
+}
+
 .workspace {
-    height: 60%;
+    height: 65%;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 20px;
     border: 2px solid white;
+    margin-bottom: 10px;
 }
 
 .story-box {
@@ -305,3 +321,40 @@ footer {
         height: 85%;
         overflow: scroll;
     }
+
+.reponse {
+    position: relative;
+    height: 10%;
+}
+
+#contribution {
+    float: left;
+    width: 100%;
+    height: 45px;
+    padding: 10px;
+    color: white;
+    text-align: left;
+    resize: none;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid rgba(0, 0, 0);
+    border-radius: 10px;
+    
+    font-size: 1.3em;
+    
+    -webkit-transition: height 0.4s ease-in-out;
+    transition: height 0.4s ease-in-out;
+}
+
+#contribution:focus {
+    height: 15%;
+    outline-width: 0;
+    border-color: white;
+    
+    -webkit-transition: height 0.4s ease-in-out;
+    transition: height 0.4s ease-in-out;
+}
+
+input[type=button] {
+    display: none;
+}
