--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,9 @@ html, body {
     padding: 0;
     height: 100%;
     font-family: Lato, sans-serif;
-    background-color: #3498db;
+    background-image: url('../img/background.png');
+    background-position: center;
+    background-size: cover;
 }
 
 html {overflow: hidden;}
@@ -113,7 +115,7 @@ header {
     font-weight: lighter;
     top: 50%;
     left: 50%;
-    width: auto;
+    width: 70%;
     transform: translate(-50%, -50%);
     text-align: center;
 }
@@ -133,7 +135,7 @@ header {
 input[type=text] {
     display: inline-block;
     padding: 4px 4px;
-    width: 50%;
+    width: 30%;
     box-sizing: border-box;
     border: none;
     border-bottom: 2px solid #ecf0f1;
@@ -329,32 +331,62 @@ footer {
 
 #contribution {
     float: left;
+    height: 60px;
     width: 100%;
-    height: 45px;
     padding: 10px;
+    margin-right: 20px;
     color: white;
     text-align: left;
     resize: none;
 
-    background-color: rgba(0, 0, 0, 0.5);
-    border-bottom: 1px solid rgba(0, 0, 0);
-    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-top: none;
+    border-right: none;
+    border-left: 2px solid darkgrey;
+    border-bottom: 2px solid darkgrey;
     
     font-size: 1.3em;
     
-    -webkit-transition: height 0.4s ease-in-out;
-    transition: height 0.4s ease-in-out;
+    transition: 0.4s ease-in-out;
 }
 
 #contribution:focus {
     height: 15%;
     outline-width: 0;
+    background-color: rgba(0, 0, 0, 0.5);
     border-color: white;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
     
-    -webkit-transition: height 0.4s ease-in-out;
-    transition: height 0.4s ease-in-out;
+    transition: 0.4s ease-in-out;
+}
+
+#input_col {
+    float: left;
+    position: relative;
+    width: 60%;
+    padding: 10px;
+}
+
+#submission_col {
+    float: right;
+    position: relative;
+    width: 30%;
+}
+
+#contribution_input input[type=text] {
+    float: right;
+    display: block;
+    text-align: right;
+    width: 50%;
+}
+
+#contribution_input input[type=text]:focus {
+    width: 100%;
 }
 
 input[type=button] {
-    display: none;
+    border: none;
+    float: right;
+    background: white;
 }
